--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ ANTHROPIC_API_KEY=your-api-key-here
 
 # Optional: Override model (default: claude-sonnet-4-20250514)
 # ANTHROPIC_MODEL=claude-sonnet-4-20250514
+
+# Optional: Argo data fetch timeout in seconds (default: 45)
+# ARGO_FETCH_TIMEOUT=45
